--- a/src/components/sample/sampleBox/sampleBox.module.css
+++ b/src/components/sample/sampleBox/sampleBox.module.css
@@ -1,14 +1,15 @@
 .img img {
-  height: 100%;
+  height: 240px;
   width: 100%;
   display: block;
   margin: auto;
+  object-fit: cover;
 }
 
 .title {
   display: flex;
   align-items: center;
-  margin-top: 1rem;
+  margin-top: 1rem; 
 }
 
 .title h3 {
@@ -19,14 +20,12 @@
 }
 
 .tag {
-    margin-top: 0.5rem;
+  margin-top: 0.5rem;
 }
-
 
 .tag p {
   margin: 0;
 }
-
 
 @media (max-width: 600px) {
   .img img {
